force-app/main/default/objects/PAG_MoID_Minted__e.object
<CustomObject>
    <fields>
        <fullName>PAG_ContactId__c</fullName>
        <label>Contact Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAG_MoID__c</fullName>
        <label>MoID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAG_OccurredAt__c</fullName>
        <label>Occurred At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PAG_PersonaKey__c</fullName>
        <label>Persona Composite Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAG_SoRPersonId__c</fullName>
        <label>SoR Person Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAG_SoR__c</fullName>
        <label>System of Record</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>MoID Minted</label>
    <pluralLabel>MoID Minted</pluralLabel>
</CustomObject>